--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,13 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".main.ui.home.HomeFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lstRefresh"
+    <EditText
+        android:id="@+id/txtSearch"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/editext_flat"
+        android:drawableStart="@drawable/ic_baseline_search"
+        android:drawablePadding="5dp"
+        android:layout_margin="8dp"
+        android:hint="Buscar..."
+        android:inputType="textNoSuggestions"
+        android:padding="5dp"
+        android:paddingLeft="45dp"
+        android:textColor="@color/purple_500"
+        android:textColorHint="@color/purple_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lstRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSearch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
